# mlversion

./: .bumpversion.cfg  .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst  modules.rst
docs/source/_files/_modules/: mlversion.rst
mlversion/: __init__.py  _artifact.py  _artifact_handler.py  _artifacts.py  _utils.py  _version.py  _version_handler.py  errors.py
tests/unit/: conftest.py  test_artifact_handler.py  test_version_handler.py
